assets/stylesheet.css
.container {
  width: @container-desktop !important;
}

.loader {
  border: 16px solid #f3f3f3;
  /* Light grey */
  border-top: 16px solid #3498db;
  /* Blue */
  border-radius: 50%;
  width: 120px;
  height: 120px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.wrapper {
  width: 680px;
}

.wrapper h1 {
  color: #555;
  text-align: center;
  text-shadow: rgba(0, 0, 0, 0.15) 0px 0px 1px;
  letter-spacing: 2px;
}

#poets {
  width: 650px;
  background: white;
}

#nabThumb {
  float: right;
  color: red;
}

.alphabet, .alphabet_poems, .alphabet_poems_tab2 {
  overflow: hidden;
}

.alphabet a, .alphabet_poems a, .alphabet_poems_tab2 a, #poets-table tr {
  transition: background-color 0.3s ease-in-out;
  -moz-transition: background-color 0.3s ease-in-out;
  -webkit-transition: background-color 0.3s ease-in-out;
}

.alphabet a, .alphabet_poems a, .alphabet_poems_tab2 a {
  width: 20px;
  float: right;
  color: #333;
  cursor: pointer;
  height: 20px;
  border: 0px solid #CCC;
  display: block;
  font-size: 18px;
  text-align: center;
  line-height: 20px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
  border-right: none;
  text-decoration: none;
}

.poetsList, .poemsList {
  overflow: hidden;
}

.poetsList a, .poemsList a {
  color: #000000;
  text-decoration: none;
}

.poetsList a.active, .poemsList a.active {
  font-weight: bold;
  background-color: #a8a8a8;
}

.alphabet a.first, .alphabet_poems a.first, .alphabet_poems_tab2 a.first {
  border-radius: 3px 0 0 3px;
}

.alphabet a.last, .alphabet_poems a.last, .alphabet_poems_tab2 a.last {
  border-right: 1px solid silver;
  border-radius: 0 3px 3px 0;
}

.alphabet a:hover, .alphabet a.active, .alphabet_poems a:hover, .alphabet_poems a.active, .alphabet_poems_tab2 a.active {
  background-color: #a8a8a8;
}

#home {
  margin-right: 20px;
}

#menu1 {
  margin-right: 20px;
}

#artist_list {
  float: right;
  width: 500px;
}

.ordlist {
  counter-reset: item;
  direction: rtl;
}

.linum {
  direction: rtl;
  display: block;
}

.linum:before {
  content: counters(item, ".") " ";
  counter-increment: item;
  direction: rtl;
}


/* Remove the navbar's default rounded borders and increase the bottom margin */

.navbar {
  margin-bottom: 50px;
  border-radius: 0;
}


/* Remove the jumbotron's default bottom margin */

.jumbotron {
  margin-bottom: 0;
}

.scrollable{
overflow-y: auto;
height: 20rem;
width: 30rem;
}

.simple::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}
.simple::-webkit-scrollbar-track {
  border-radius: 10px;
  background: rgba(0,0,0,0.1);
}
.simple::-webkit-scrollbar-thumb{
  border-radius: 10px;
  background: rgba(0,0,0,0.2);
}
.simple::-webkit-scrollbar-thumb:hover{
	background: rgba(0,0,0,0.4);
}
.simple::-webkit-scrollbar-thumb:active{
	background: rgba(0,0,0,.9);
}

/* Add a gray background color and some padding to the footer */

footer {
  background-color: #f2f2f2;
  padding: 25px;
}

